HBASE-29144 Client request fails for KERBEROS with RpcConnectionRegistry (#7588)
Signed-off-by: Junegunn Choi <junegunn@apache.org>